--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "reveal-js": "^2.6.2",
     "gridster": "^0.5.6",
     "jquery": "^3.1.1",
-    "masonry": "^4.1.1"
+    "masonry": "^4.1.1",
+    "fullpage.js": "^2.9.2"
   }
 }
