--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "colors": "^1.1.2",
     "connect-multiparty": "^2.0.0",
     "express": "^4.14.0",
+    "express-fileupload": "0.0.6",
     "gitlog": "^2.4.0",
     "mongodb": "^2.2.10",
     "node-metainspector": "^1.3.0",
